k8s/promptcontent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: promptcontent-dev
  labels:
    project: promptSales
    env: dev
